Try quarkus in-place to diff